# CINPLA_Allen_V1_analysis

./: README.md  pyproject.toml  setup.py
cinplaAnalysis/: icsd.py
cinplaAnalysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cinplaAnalysis/.ipynb_checkpoints/: utils-checkpoint.py
