[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cinplaAnalysis"
version = "0.0.2"
description = ""
authors = [
    { name = "alteer" }
]
license = { text = "NONE" }
readme = ""
requires-python = ">=3.9,<3.10"

dependencies = [
    "numpy",
    "scipy",
    "tqdm",
    "quantities",
    "neo",
    "notebook",
    "ipykernel",
    "matplotlib",
    "POT"
]

[tool.setuptools]
packages = ["cinplaAnalysis"]

