[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cinplaAnalysis"
version = "0.0.2"
description = ""
authors = [
    { name = "alteer" }
]
license = { text = "NONE" }
readme = ""

dependencies = [
    "numpy",
    "scipy",
    "tqdm",
    "quantities",
    "neo",
    "notebook",
    "ipykernel",
    "matplotlib",
    "POT"
]

[tool.setuptools]
packages = ["cinplaAnalysis"]

